...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:id="@+id/backArrow"
                    android:layout_height="40dp"
                    android:layout_width="65dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="5dp"
                    android:padding="0dp"
                    android:adjustViewBounds="true"
...
                        android:textColor="#434343"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        tools:ignore="TextContrastCheck" />

                    <ImageButton
                        android:id="@+id/ProfilePicThumbnail"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="0dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile_pic" />
...
                android:orientation="horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp">


                <Spinner
                    android:id="@+id/heightSpinner"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
...
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_text" />

                <EditText
                    android:id="@+id/weightTextField"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text"
                    android:paddingHorizontal="10dp"
                    android:layout_marginStart="8dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="0dp">
                <Spinner
                    android:id="@+id/regimenSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:padding="8dp"
                    android:background="@drawable/edit_text"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="@color/white"
                    />
                <Spinner
                    android:id="@+id/activityLevelSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:padding="8dp"
...
                    android:layout_marginBottom="5dp"
                    android:text="Weight goal:"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            <Spinner
                android:id="@+id/poundsGoalSpinner"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editProfileButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
...
                    android:padding="10dp"
                    android:text="edit data"
                    android:textColor="#434343"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/updateProfileButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
...
                    android:text="Daily calories to meet your goal:"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/DailyCaloriesText"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b4a7d6"
                    android:layout_marginLeft="5dp"
...
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/BMRText"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b4a7d6"
                    android:layout_marginTop="15dp"
...
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/BMIText"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b4a7d6"
                    android:layout_marginTop="15dp"
...
