...
                android:background="@drawable/widget_background"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                >
                <TextView
                    android:id="@+id/cityTextField"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
...
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:id="@+id/TemperatureHighText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="NA"
                            android:fontFamily="@font/comfortaa_bold"
                            android:textSize="25sp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
...
                android:text="Modules"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/MyProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
...
                    android:textColor="#434343"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    />

                <Button
                    android:id="@+id/BMICalcButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
...
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="#434343"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    />
            <Button
                android:id="@+id/MyFitnessRegimenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
...
