...
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text"
                android:paddingHorizontal="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
...
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

            <Spinner
                android:id="@+id/ageSpinner"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
...
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text"  />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
...
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/createProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="Create Profile"
...
