...
            android:textColor="@color/white"
            android:background="@drawable/edit_text"
            android:textSize="20sp"
            />
        </LinearLayout>
        <Button
            android:id="@+id/CalculateBMIButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
...
